--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     </head>
     <body>
     <header>
-        <nav class="navbar navbar-inverse" role="navigation">
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 			<div class="container-fluid">
 				<!-- Brand and toggle get grouped for better mobile display -->
 			    <div class="navbar-header">
@@ -29,7 +29,9 @@
                     <ul class="nav navbar-nav">
                         <li ><a href="/">Home</a></li>
                         <li><a href="http://blog.codinggrace.com">Blog</a></li>
-                        <li class="active"><a href="about.html">About</a></li>
+                        <!--<li class="active"><a href="about.html">About</a></li>-->
+                        <li class="active"><a href="/#about">About</a></li>
+                        <li ><a href="/#conduct">Code of Conduct</a></li>
                     </ul>
 			     </div>
             </div> <!-- container-fluid -->
@@ -103,7 +105,9 @@ alt="Coding Grace Logo">
 
     </div>
     <footer>
-        Coding Grace 2013 - 2014 || <a href="http://twitter.com/codinggrace">@codinggrace</a>
+        <section>
+            Coding Grace 2013 - 2014 || <a href="http://twitter.com/codinggrace">@codinggrace</a> || <a href="https://www.facebook.com/pages/Coding-Grace/501098363273457">Facebook Page</a>
+        </section>
     </footer>
     
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
