updated a link to another code of conduct reference

--- a/code_of_conduct.html
+++ b/code_of_conduct.html
@@ -330,6 +330,7 @@
                         we pledge only to attend, speak at, assist, sponsor, or otherwise participate in conferences
                         that publicly promote an anti-harassment and anti-discrimination code of conduct policy.”
                     </li>
+                    <li><a href="http://geekfeminism.wikia.com/wiki/Code_of_conduct">Geek Feminism - Code of Conduct</a></li>
                 </ul>
             </div>
         </div>
