updated style for front page

--- a/index.html
+++ b/index.html
@@ -56,35 +56,15 @@
     </div>
 </div>
     <section id="home">
-        <h1>Keep up-to-date</h1>
+        <!--<h1 class="orange_section">Keep up-to-date</h1>-->
         <div class="row">
 
-            <div class="col-md-5 col-md-offset-1">
-                <div class="well well-lg">
-                <!--<p>Subscribe to our monthly news letter</p>-->
-                <!-- Begin MailChimp Signup Form -->
-                <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
-                <style type="text/css">
-                    #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-                    /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-                       We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-                </style>
-                <div id="mc_embed_signup">
-                    <form action="http://codinggrace.us7.list-manage.com/subscribe/post?u=8612b25618972d14df5c6a1fb&amp;id=78108add1f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                        <label for="mce-EMAIL">Subscribe to our monthly newsletter about upcoming events</label>
-                        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                        <div style="position: absolute; left: -5000px;"><input type="text" name="b_8612b25618972d14df5c6a1fb_78108add1f" value=""></div>
-                        <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-                    </form>
-                </div>
-                <!--End mc_embed_signup-->
-                </div>
+            <div class="col-md-2">
+                <h1 class="section_header_label">KEEP IN TOUCH</h1>
             </div>
-            <div class="col-md-5">
-
+            <div class="col-md-3">
+                <h4>Other ways of joining in the conversation</h4>
                 <p>
-                    Other ways of joining in the conversation:-
                     <ul>
                         <li >
                             Chat on our <a href="https://groups.google.com/forum/#!forum/coding-grace">Coding Grace forum</a>.
@@ -97,12 +77,29 @@
                 <h4>Questions?</h4>
                 <span class="glyphicon glyphicon-envelope"></span> <a href="mailto:codinggrace@gmail.com">codinggrace@gmail.com</a>
             </div>
-        </div>
+            <div class="col-md-5">
+                <!--<p>Subscribe to our monthly news letter</p>-->
+                <!-- Begin MailChimp Signup Form -->
+                <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
 
+                <div id="mc_embed_signup">
+                    <form action="http://codinggrace.us7.list-manage.com/subscribe/post?u=8612b25618972d14df5c6a1fb&amp;id=78108add1f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                        <label for="mce-EMAIL">Subscribe to our monthly newsletter about upcoming events</label>
+                        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                        <div style="position: absolute; left: -5000px;"><input type="text" name="b_8612b25618972d14df5c6a1fb_78108add1f" value=""></div>
+                        <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                    </form>
+                </div>
+                <!--End mc_embed_signup-->
+            </div>
+
+
+        </div>
 
         <div class="divide"></div>
 
-        <h1>Upcoming events</h1>
+        <h1 class="general_section">UPCOMING EVENTS</h1>
         <div class="row">
         
         <div class="col-md-3">
@@ -160,7 +157,7 @@
     <div class="divide"></div>
 
     <section id="about">
-        <h1>About Coding Grace</h1>
+        <h1 class="general_section">ABOUT CODING GRACE</h1>
         <div class="row">
             <div class="col-md-8">
                 <section>
@@ -209,7 +206,7 @@
     <div class="divide"></div>
 
     <section id="conduct">
-        <h1>Code of Conduct</h1>
+        <h1 class="general_section">CODE OF CONDUCT</h1>
         <p>
             We value the participation of each member of the community and want all attendees to have an enjoyable and
             fulfilling experience. Accordingly, all attendees are expected to show respect and courtesy to other
