--- a/index.html
+++ b/index.html
@@ -59,10 +59,14 @@
         <!--<h1 class="orange_section">Keep up-to-date</h1>-->
         <div class="row">
 
-            <div class="col-md-2">
-                <h1 class="section_header_label">KEEP IN TOUCH</h1>
+            <div class="col-sm-3">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        <h1 class="section_header_label">KEEP IN TOUCH</h1>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-sm-3">
                 <h4>Other ways of joining in the conversation</h4>
                 <p>
                     <ul>
@@ -77,7 +81,7 @@
                 <h4>Questions?</h4>
                 <span class="glyphicon glyphicon-envelope"></span> <a href="mailto:codinggrace@gmail.com">codinggrace@gmail.com</a>
             </div>
-            <div class="col-md-5">
+            <div class="col-sm-5">
                 <!--<p>Subscribe to our monthly news letter</p>-->
                 <!-- Begin MailChimp Signup Form -->
                 <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
@@ -157,7 +161,7 @@
     <div class="divide"></div>
 
     <section id="about">
-        <h1 class="general_section">ABOUT CODING GRACE</h1>
+        <h1 class="general_section">ABOUT US</h1>
         <div class="row">
             <div class="col-md-8">
                 <section>
