Manually editing and updating location

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                     <section>
                         <h6>Saturday 15 March, 10:45</h6>
                         <address>
-                            <strong>Dublin Exchange Building (Beside Georges Dock LUAS stop)</strong><br/>
-                            George&#39;s Dock, IFSC, D1<br/>
+                            <strong>The Liffey Room, Jurys Inn Custom House Quay</strong><br/>
+                            Custom House Quay, D1<br/>
                             <abbr title="Contact Organiser - Vicky">P:</abbr> +353 86 150 2003
                         </address>
                         <p>
