updated front page with latest workshops

--- a/index.html
+++ b/index.html
@@ -109,31 +109,6 @@
         <div class="col-md-3">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <h5>[Coding Grace] Introduction to Processing</h5>
-                </div>
-
-                <div class="panel-body">
-                    <section>
-                        <h6>Saturday 15 March, 10:45</h6>
-                        <address>
-                            <strong>Dublin Exchange Building (Beside Georges Dock LUAS stop)</strong><br/>
-                            George&#39;s Dock, IFSC, D1<br/>
-                            <abbr title="Contact Organiser - Vicky">P:</abbr> +353 86 150 2003
-                        </address>
-                        <p>
-                            Interested in &#34;creative coding&#34; or visual coding? Or are you a programmer who want to do graphics? Come along to our female-friendly Introduction to ...
-                        </p>
-                        <div>
-                            <a href="https://www.eventbrite.ie/e/coding-grace-introduction-to-processing-tickets-10369053117?ref=ebapi" class="center-block btn btn-success active" role="button">Register</a>
-                        </div>
-                    </section>
-                </div>
-            </div>
-        </div>
-        
-        <div class="col-md-3">
-            <div class="panel panel-primary">
-                <div class="panel-heading">
                     <h5>[Coding Grace] Basic Command Line</h5>
                 </div>
 
@@ -150,6 +125,31 @@
                         </p>
                         <div>
                             <a href="https://www.eventbrite.ie/e/coding-grace-basic-command-line-tickets-10728125111?ref=ebapi" class="center-block btn btn-success active" role="button">Register</a>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </div>
+        
+        <div class="col-md-3">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h5>[Coding Grace] Introduction to Git</h5>
+                </div>
+
+                <div class="panel-body">
+                    <section>
+                        <h6>Wednesday 16 April, 18:30</h6>
+                        <address>
+                            <strong>Adverts.ie Office (4th Floor)</strong><br/>
+                            19 / 22 Dame Street, D2<br/>
+                            <abbr title="Contact Organiser - Vicky">P:</abbr> +353 86 150 2003
+                        </address>
+                        <p>
+                            Source control is really important no matter how big or small your projects are. Come join us with an introductary workshop into using Git via a ...
+                        </p>
+                        <div>
+                            <a href="https://www.eventbrite.ie/e/coding-grace-introduction-to-git-tickets-10858388733?ref=ebapi" class="center-block btn btn-success active" role="button">Register</a>
                         </div>
                     </section>
                 </div>
