updated info as well as added resources page

--- a/code_of_conduct.html
+++ b/code_of_conduct.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Coding Grace - About Us</title>
+        <title>Coding Grace - Code of Conduct</title>
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/static/css/bootstrap.min.css">
@@ -46,7 +46,7 @@
             <img src="/static/images/codinggrace-logo.png" alt="Coding Grace Logo">
         </div>
         <div class="col-md-6">
-            <h1>CODE OF CONDUCT</h1>
+            <h1></h1>
         </div>
         <div class="col-md-3">
             <div class="well">
