--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <img src="/static/images/codinggrace-logo.png" alt="Coding Grace Logo">
         </div>
         <div class="col-md-6">
-            <h1>FEMALE-FRIENDLY EVENTS</h1>
+            <h1></h1>
         </div>
         <div class="col-md-3">
             <div class="well">
@@ -116,8 +116,8 @@
                     <section>
                         <h6>Friday 28 March, 18:30</h6>
                         <address>
-                            <strong>The Liffey Room, Jurys Inn Custom House Quay</strong><br/>
-                            Custom House Quay, D1<br/>
+                            <strong>Dublin Exchange Building (Beside Georges Dock LUAS stop)</strong><br/>
+                            George&#39;s Dock, IFSC, D1<br/>
                             <abbr title="Contact Organiser - Vicky">P:</abbr> +353 86 150 2003
                         </address>
                         <p>
