--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         <p>
             Thank you for helping make this a welcoming, friendly event for all.
         </p>
-        <p>For the longer version, you can read it here: <a href="code_of_conduct.html">Coding Grace Code of Conduct full version</a></p>
+        <p>For the longer version, you can read it here: <a href="code_of_conduct/">Coding Grace Code of Conduct full version</a></p>
     </section>
 
 
