updates source control section

--- a/resources/index.html
+++ b/resources/index.html
@@ -153,13 +153,17 @@ make like easier like source control integration, additional syntax highlighting
 interacting with open-source projects. It's a necessary skill that all who writes code should know. It will solve
 a lot of headaches and at least certain doom (might be exaggerated, but it feels like that at the time) and knowing
 that you can revert changes, it's quite a life-saver.</p>
+<p>If you know Git or Mercurial and want to know what the difference is between them, here's a handy reference page:</p>
+<ul>
+<li><a href="https://github.com/sympy/sympy/wiki/Git-hg-rosetta-stone">Git hg Rosetta Stone</a></li>
+</ul>
 <h2>Recommended Distributed Version Control System</h2>
 <h3 id="git">Git</h3>
 
 <p>After downloading <a href="http://git-scm.com/">Git</a>, go through their <a href="http://git-scm.com/docs/gittutorial">tutorial</a>.</p>
 <p>Other references:</p>
 <ul>
-<li>...</li>
+<li><a href="http://git-scm.com/docs">Git's own cheatsheets</a></li>
 </ul>
 <h3 id="hg">Mercurial (hg)</h3>
 
@@ -167,6 +171,7 @@ that you can revert changes, it's quite a life-saver.</p>
 <p>Other references:</p>
 <ul>
 <li><a href="http://mercurial.selenic.com/wiki/Tutorial">Mercurial's own tutorial</a></li>
+<li><a href="http://mercurial.selenic.com/wiki/QuickReferenceCardsAndCheatSheets">Mercurial's own cheatsheets</a></li>
 </ul>
         </div>
     </section>
