updated location for this week's workshop to jurys

--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
                     <section>
                         <h6>Friday 28 March, 18:30</h6>
                         <address>
-                            <strong>Dublin Exchange Building (Beside Georges Dock LUAS stop)</strong><br/>
-                            George&#39;s Dock, IFSC, D1<br/>
+                            <strong>Bay Room, Jurys Inn Custom House Hotel, Dublin</strong><br/>
+                            1 Custom House Quay, <br/>
                             <abbr title="Contact Organiser - Vicky">P:</abbr> +353 86 150 2003
                         </address>
                         <p>
-                            Learn basic command line in your terminal. Tutorials, and even some Coding Grace workshops will require you to open up a terminal or a console and ...
+                            &gt;&gt; VENUE CHANGED to BAY ROOM, JURY&#39;S INN, CUSTOM HOUSE QUAY Learn basic command line in your terminal. Tutorials, and even some Coding Grace ...
                         </p>
                         <div>
                             <a href="https://www.eventbrite.ie/e/coding-grace-basic-command-line-tickets-10728125111?ref=ebapi" class="center-block btn btn-success active" role="button">Register</a>
@@ -139,7 +139,7 @@
 
                 <div class="panel-body">
                     <section>
-                        <h6>Wednesday 16 April, 18:30</h6>
+                        <h6>Monday 14 April, 18:30</h6>
                         <address>
                             <strong>Adverts.ie Office (4th Floor)</strong><br/>
                             19 / 22 Dame Street, D2<br/>
