added info about grace hopper

--- a/index.html
+++ b/index.html
@@ -212,6 +212,11 @@
                     We also have <a href="https://coding-grace-guide.readthedocs.org/en/latest/index.html">a guide for
                     mentors and participants</a>. This is work-in-progress.
                 </p>
+                <h2>Who's Grace?</h2>
+                <p>
+                    Coding Grace is an homage to <a href="http://en.wikipedia.org/wiki/Grace_Hopper">Grace Hopper</a>. She is a computer scientist who held one of the highest ranks in the US Navy, the Rear Admiral. She created the term "debug", literally removing a moth from a computer. She also developed COBOL. Another interesting tidbit, she was awarded the inaugural Computer Scientist "Man" of the Year award in 1969 from the Data Processing Management Association. "Amazing Grace" also had a U.S. Navy destroyer named after her called "USS Hopper".
+                </p>
+                <h2>Contact Us</h2>
                 <p>
                     If you want to contact us regarding 
                     <ul>
@@ -220,6 +225,8 @@
                         <li>mentoring</li>
                     </ul>
                     or just because you are curious, drop us an email at <a href="mailto:contact@codinggrace.com">contact@codinggrace.com</a>.
+                    <br/>
+                    Just a note to say that there's no-one on in Coding Grace called Grace. :-)
                 </p>
             </div>
             <div class="col-md-4">
