updated titles and also added glitch event

--- a/index.html
+++ b/index.html
@@ -120,7 +120,6 @@
         <h1 class="general_section">UPCOMING EVENTS</h1>
         <div class="row">
         
-
         <div class="col-md-3">
             <div class="panel panel-primary">
                 <div class="panel-heading">
@@ -148,6 +147,29 @@
             </div>
         </div>
         
+        <div class="col-md-3">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h5>GLITCH Festival: Introduction to HTML5/CSS3</h5>
+                </div>
+
+                <div class="panel-body">
+                    <section>
+                        <h6>Saturday 28 May, 11:00 - 16:00</h6>
+                        <address>
+                            <strong>RUA RED, South Dublin Arts Centre, Tallaght, Dublin 24</strong><br/>
+                        </address>
+
+                        <p>
+                            The workshop will consist of 3 lessons presented by one of the mentors who will introduce students to the basic concepts of HyperText Mark-up Language (HTML) and Cascading Style Sheets (CSS) with a emphasis on hands-on exercises.
+                        </p>
+                        <div>
+                            <a href="http://www.ruared.ie/glitch_2014.html" class="center-block btn btn-success active" role="button">Register</a>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </div>
     </section>
 
     <div class="divide"></div>
