updated front page with f-sharp workshop

--- a/index.html
+++ b/index.html
@@ -143,6 +143,29 @@
                 </div>
             </div>
         </div>
+        <div class="col-md-3">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h5>Beginners F# Workshop</h5>
+                </div>
+
+                <div class="panel-body">
+                    <section>
+                        <h6>Saturday 12 July, 11:00 - 16:00</h6>
+                        <address>
+                            <strong>Microsoft Ireland, Building 3, Sandyford, Dublin</strong><br/>
+                        </address>
+
+                        <p>
+                            Phil Trelford will be our F# mentor. The goal of this session is to use F# and sample data from Kaggle to predict who lives and who dies on the Titanic!
+                        </p>
+                        <div>
+                            <a href="https://ti.to/eventgeekie/fsharp-machine-learning-from-disaster" class="center-block btn btn-success active" role="button">Register</a>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </div>
     </section>
 
     <div class="divide"></div>
