updated with new event

--- a/index.html
+++ b/index.html
@@ -136,6 +136,12 @@
                         <p>
                             The workshop will consist of 3 lessons presented by one of the mentors who will introduce students to the basic concepts of HyperText Mark-up Language (HTML) and Cascading Style Sheets (CSS) with a emphasis on hands-on exercises.
                         </p>
+                        <p>
+                            You will need to bring your laptop.
+                        </p>
+                        <p>
+                            Lunch will be provided.
+                        </p>
                         <div>
                             <a href="http://www.ruared.ie/glitch_2014.html" class="center-block btn btn-success active" role="button">Register</a>
                         </div>
@@ -143,6 +149,37 @@
                 </div>
             </div>
         </div>
+
+        <div class="col-md-3">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h5>Beginners PyGame Workshop</h5>
+                </div>
+
+                <div class="panel-body">
+                    <section>
+                        <h6>Saturday 5 July, 11:00 - 16:00</h6>
+                        <address>
+                            <strong>Adverts.ie (4th Floor), 19/22 Dame Street, D2</strong><br/>
+                        </address>
+
+                        <p>
+                            Learn how to use Python and pyGame to create a simple 2D motoring racing game.
+                        </p>
+                        <p>
+                            You will need to bring your laptop and have Python and PyGame installed. Instructions on events page.
+                        </p>
+                        <p>
+                            Lunch will be provided.
+                        </p>
+                        <div>
+                            <a href="https://ti.to/eventgeekie/introduction-to-pygame" class="center-block btn btn-success active" role="button">Register</a>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </div>
+
         <div class="col-md-3">
             <div class="panel panel-primary">
                 <div class="panel-heading">
@@ -158,6 +195,12 @@
 
                         <p>
                             Phil Trelford will be our F# mentor. The goal of this session is to use F# and sample data from Kaggle to predict who lives and who dies on the Titanic!
+                        </p>
+                        <p>
+                            You will need to bring your laptop and have F# installed beforehand. Instructions on events page.
+                        </p>
+                        <p>
+                            Lunch will be provided.
                         </p>
                         <div>
                             <a href="https://ti.to/eventgeekie/fsharp-machine-learning-from-disaster" class="center-block btn btn-success active" role="button">Register</a>
