updated with robocode event on front page

--- a/index.html
+++ b/index.html
@@ -209,6 +209,36 @@
                 </div>
             </div>
         </div>
+
+         <div class="col-md-3">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h5>Robocode</h5>
+                </div>
+
+                <div class="panel-body">
+                    <section>
+                        <h6>Saturday 26 July, 11:00 - 16:00</h6>
+                        <address>
+                            <strong>Adverts.ie (4th Floor), 19/22 Dame Street, D2</strong><br/>
+                        </address>
+
+                        <p>Come join us for a few hours of virtual robot wars and learn how to control your robot tank with Robocode.</p>
+
+                        <p>Robocode is a programming game, where the goal is to develop a robot battle tank to battle against other tanks in Java.</p>
+                        <p>At the end of the class participants will get the chance to play their robots in an arena against peers!</p>
+
+                        <p>
+                            Lunch will be provided.
+                        </p>
+                        <div>
+                            <a href="https://ti.to/eventgeekie/robocode" class="center-block btn btn-success active" role="button">Register</a>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </div>
+
     </section>
 
     <div class="divide"></div>
@@ -252,7 +282,7 @@
                 </p>
                 <h2>Contact Us</h2>
                 <p>
-                    If you want to contact us regarding 
+                    If you want to contact us regarding
                     <ul>
                         <li>sponsorships</li>
                         <li>workshops</li>
